# DeepAgents-New

./: .gitignore  pcs_guidelines_clean.txt  pyproject.toml  test_cases.py
app/: config.py  main.py
app/routers/: chat.py
app/schemas/: chat.py
data/: icd10_tabular_top_level_only.csv  index_pipeline.py  pcs_tables_pipeline.py  saveParents.py  tabular_pipeline.py  test_csv.csv
embeddings/: guidelines_to_chroma.py  pcs_tables_to_chroma.py  query_test.py  save_to_chroma.py  savt_top_to_chroma.py
evals/: first_eval.py
src/: llms.py  main.py  prompts.py  tools.py
src/models/: agent_model.py
tests/: evaluate_icd10pcs_model.py  evaluation_pcs_results.txt  extract_procedures.py  test_cases.py  test_list.txt
